Improvements on status bar, icon fonts, pywal

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -21,6 +21,8 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
+exec-once = swww init
+exec-once = ./setwallp
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -51,8 +53,9 @@ general {
     gaps_in = 10
     gaps_out = 20
     border_size = 1 1 1 
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(ffffffff) rgba(b5b5b5b5) 45deg
+        
+    col.inactive_border = rgba(40404040)
 
     layout = dwindle
 }
@@ -63,7 +66,7 @@ decoration {
     rounding = 0
     
     blur {
-        enabled = true
+        enabled = false 
         size = 3
         passes = 1
     }
@@ -125,6 +128,10 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, Space, exec, wofi
+#bind = $mainMod, Next, togglefloating, #Page Down for toggle floating
+#bind = $mainMod, Prior, togglefloating, #Page Up for also toggle floating, i know, it's weird, but it works
+
+bind = $mainMod, W, exec, librewolf
 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
