--- a/config.jsonc
+++ b/config.jsonc
@@ -4,43 +4,31 @@
   "height": 50,
   
   "modules-left": [
-    "custom/launch_wofi",
     "cpu",
     "memory",
-    "disk",
-    "hyprland/window"
+    "disk"
   ],
   
   "modules-center": [
-    "clock"
+    "hyprland/workspaces"
   ],
     
   "modules-right": [
-    "temperature", "pulseaudio"
+    "temperature", "pulseaudio", "clock"
   ],
 
 
 //~~~~~~~~~~~~~~~ LEFT MODULES ~~~~~~~~~~~~~~~~//
 
-  "custom/launch_wofi": {
-    "format": "->",
-    "on-click": "pkill wofi; wofi -n",
-    "tooltip": false
-  },
-
-  "hyprland/window": {
-    "format": "{}"
-  },
-
   "cpu": {
     "interval": 10,
-    "format": "CPU {usage}%",
+    "format": "󰻠 {usage}%",
     "max-length": 10
   },
 
   "disk": {
     "interval": 30,
-    "format": "DISK {percentage_used}%",
+    "format": " 󰋊 {percentage_used}%",
     "path": "/",
     "tooltip": true,
     "tooltip-format": "HDD - {used}/{total}"
@@ -48,33 +36,47 @@
 
   "memory": {
     "interval": 30,
-    "format": "RAM {}%",
+    "format": "󰍛 {}%",
     "max-length": 10,
     "tooltip": true,
     "tooltip-format": "Memory - {used:0.1f}GB used"
+  },
+
+//~~~~~~~~~~~~~~~~ CENTER MODULES ---------------//
+  "hyprland/workspaces": {
+    "all-outputs": true,
+    "activate-only": false,
+    "on-click": "activate",
+    "format": "{icon}",
+    "format-icons":{
+      "urget":"",
+      "active":"",
+      "default":""
+    },
+    "persistent-workspaces": {
+      "*":5
+    }
   },
 
 //~~~~~~~~~~~~~~~~ RIGHT MODULES ----------------//
   
   "temperature": {
     "thermal-zone": 1,
-    "format": "Temp {temperatureC}°C",
+    "format": " {temperatureC}°C",
     "critical-threshold": 70,
-    "format-critical": "!Temp {temperatureC}°C"
+    "format-critical": " {temperatureC}°C"
   },
 
   "pulseaudio": {
     "format": "{icon} {volume}%",
-    "format-muted": "MUTE",
+    "format-muted": "",
     "on-click": "pamixer -t",
     "on-scroll-up": "pamixer -i 5",
     "on-scroll-down": "pamixer -d 5",
     "scroll-step": 5,
     "format-icons": {
-      "headphone": "Sound",
-      "default": ["Low Sound","Sound","High Sound"]
+      "headphone": "Headphones",
+      "default": ["󰕿","󰖀","󰕾"]
     }
   }
-
-
 }
