Resolved color change pywal
including the cache file for pywal generated file for kitty and using it into kitty.conf

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,7 @@
+# Resolve newsboat and ncmpcpp color problems by using the Pywal config generated for kitty located in ~/.cache/wal/colors-kitty.conf. To use it, remove color configuration from kitty's configuration in ~/.config/kitty/kitty.conf and add this line: include ~/.cache/wal/colors-kitty.conf
+
+include ~/.cache/wal/colors-kitty.conf
+
 font_family jetbrains mono nerd font
 font_size 12
 background_opacity 0.90
