Added floating windows

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -20,9 +20,10 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
+
 exec-once = swww init
-exec-once = ./setwallp
+exec-once = ~/.local/bin/set-theme.sh
+exec-once = copyq --start-server
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -50,11 +51,10 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 10
-    gaps_out = 20
+    gaps_in = 5 
+    gaps_out = 10
     border_size = 1 1 1 
-    col.active_border = rgba(ffffffff) rgba(b5b5b5b5) 45deg
-        
+    #col.active_border = rgba(ffffffff) rgba(b5b5b5b5) 45deg
     col.inactive_border = rgba(40404040)
 
     layout = dwindle
@@ -126,19 +126,24 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
+bind = $mainMod SHIFT, Return, exec, [float]kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, Space, exec, wofi
 #bind = $mainMod, Next, togglefloating, #Page Down for toggle floating
 #bind = $mainMod, Prior, togglefloating, #Page Up for also toggle floating, i know, it's weird, but it works
 
-bind = $mainMod, W, exec, librewolf
+bind = $mainMod, W, exec, librewolf # open librewolf in fullscreen by default
+bind = $mainMod SHIFT, W, exec, sh -c '"/home/popo/.local/bin/tor-browser/Browser/start-tor-browser" --detach || ([ !  -x "/home/popo/.local/bin/tor-browser/Browser/start-tor-browser" ] && "$(dirname "$*")"/Browser/start-tor-browser --detach)' dummy %k
+bind = $mainMod SHIFT, R, exec, kitty ~/radio/radio.sh
 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, exec, grim -g "$(slurp)"
+bind = $mainMod SHIFT, T, exec, sh ~/.local/bin/set-theme.sh 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -171,8 +176,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod ALT, right, workspace, e+1
+bind = $mainMod ALT, left, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
