--- a/hyprland.conf
+++ b/hyprland.conf
@@ -21,8 +21,9 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = swww init
+exec-once = swww init --no-daemon # start service without loading last wallpaper
 exec-once = ~/.local/bin/set-theme.sh
+exec-once = wal-telegram --wal # Get telegram them from pywal
 exec-once = copyq --start-server
 
 # Source a file (multi-file configs)
@@ -48,6 +49,8 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+#source = ~/.cache/wal/colors-hyprland.conf
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -55,10 +58,26 @@ general {
     gaps_out = 10
     border_size = 1 1 1 
     #col.active_border = rgba(ffffffff) rgba(b5b5b5b5) 45deg
+    #col.active_border = $color11
     col.inactive_border = rgba(40404040)
-
+    
     layout = dwindle
 }
+
+# ~~ Window Rules ~~ #
+# windowrule=RULE,WINDOW
+windowrule=float,^(kitty)$
+#windowrule=move 200 200,^(kitty)$
+windowrule=size 1024 480,^(kitty)$
+windowrule=center,^(kitty)$
+
+windowrule=float,^(mpv)$
+windowrule=size 1280 768,^(mpv)$
+windowrule=center,^(mpv)$
+
+windowrule=float,^(thunar)$
+windowrule=size 760 480,^(thunar)$
+windowrule=center,^(thunar)$
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -126,7 +145,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
-bind = $mainMod SHIFT, Return, exec, [float]kitty
+bind = $mainMod SHIFT, Return, exec, [tile]kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, Space, exec, wofi
 #bind = $mainMod, Next, togglefloating, #Page Down for toggle floating
