Volumes pamixer shortuct keybord added

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -151,6 +151,9 @@ bind = $mainMod, Space, exec, wofi
 #bind = $mainMod, Next, togglefloating, #Page Down for toggle floating
 #bind = $mainMod, Prior, togglefloating, #Page Up for also toggle floating, i know, it's weird, but it works
 
+bind = $mainMod, F3, exec, pamixer -i 5
+bind = $mainMod, F2, exec, pamixer -d 5
+
 bind = $mainMod, W, exec, librewolf # open librewolf in fullscreen by default
 bind = $mainMod SHIFT, W, exec, sh -c '"/home/popo/.local/bin/tor-browser/Browser/start-tor-browser" --detach || ([ !  -x "/home/popo/.local/bin/tor-browser/Browser/start-tor-browser" ] && "$(dirname "$*")"/Browser/start-tor-browser --detach)' dummy %k
 bind = $mainMod SHIFT, R, exec, kitty ~/radio/radio.sh
