--- a/hyprland.conf
+++ b/hyprland.conf
@@ -21,13 +21,13 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = swww init --no-daemon # start service without loading last wallpaper
-exec-once = ~/.local/bin/set-theme.sh
-exec-once = wal-telegram --wal # Get telegram them from pywal
+#exec-once = swww init --no-daemon # start service without loading last wallpaper
+exec-once = swww init
+exec-once = waybar
 exec-once = copyq --start-server
 
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+source = ~/.cache/wal/colors-hyprland.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -49,18 +49,18 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-#source = ~/.cache/wal/colors-hyprland.conf
-
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5 
-    gaps_out = 10
-    border_size = 1 1 1 
-    #col.active_border = rgba(ffffffff) rgba(b5b5b5b5) 45deg
-    #col.active_border = $color11
-    col.inactive_border = rgba(40404040)
+    gaps_in = 30 
+    gaps_out = 50
+    border_size = 1
+    #col.active_border = rgba(ff0000ff) rgba(ffff0000) 45deg
+    #col.inactive_border = rgba(000000ff)
     
+    col.active_border = $color1 $color7 45deg
+    col.inactive_border = $background
+
     layout = dwindle
 }
 
@@ -68,7 +68,7 @@ general {
 # windowrule=RULE,WINDOW
 windowrule=float,^(kitty)$
 #windowrule=move 200 200,^(kitty)$
-windowrule=size 1024 480,^(kitty)$
+windowrule=size 720 380,^(kitty)$
 windowrule=center,^(kitty)$
 
 windowrule=float,^(mpv)$
@@ -82,12 +82,13 @@ windowrule=center,^(thunar)$
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 0
+    rounding = 10 
     
     blur {
-        enabled = false 
-        size = 3
-        passes = 1
+        enabled = true
+        size = 5
+        passes = 2
+        new_optimizations = on
     }
 
     drop_shadow = yes
@@ -101,14 +102,15 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    #bezier = myBezier, 0.05, 0.95, 0.9, 1.05
 
-    animation = windows, 1, 7, myBezier
+    animation = windows, 1, 7, default
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 4, default, slidevert
+    animation = specialWorkspace, 1, 10, default, slidefade
 }
 
 dwindle {
@@ -131,6 +133,10 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic-mouse-v1 {
     sensitivity = -0.5
+}
+
+misc {
+    disable_hyprland_logo = true
 }
 
 # Example windowrule v1
@@ -166,6 +172,18 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, T, exec, sh ~/.local/bin/set-theme.sh 
+bind = $mainMod SHIFT, S, exec, sh ~/.local/bin/sel-theme.sh
+
+# Resizing and moving
+bind = $mainMod ALT, right, moveactive, 100 0 
+bind = $mainMod ALT, left, moveactive, -100 0
+bind = $mainMod ALT, up, moveactive, 0 -100
+bind = $mainMod ALT, down, moveactive, 0 100
+
+bind = $mainMod CTRL, right, resizeactive, 60 0
+bind = $mainMod CTRL, left, resizeactive, -60 0
+bind = $mainMod CTRL, up, resizeactive, 0 -60
+bind = $mainMod CTRL, down, resizeactive, 0 60
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -198,8 +216,11 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod ALT, right, workspace, e+1
-bind = $mainMod ALT, left, workspace, e-1
+#bind = $mainMod CTRL, right, workspace, e+1
+#bind = $mainMod CTRL, left, workspace, e-1
+
+#bind = $mainMod CTRL, down, movetoworkspace, special
+#bind = $mainMod CTRL, down, togglespecialworkspace
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
